Fix navigation bar z-index.

--- a/app/assets/stylesheets/words.scss
+++ b/app/assets/stylesheets/words.scss
@@ -7,6 +7,8 @@
 $header-height: 56px;
 
 body.words header {
+  z-index: 1;
+
   position: fixed;
   top: 0;
   left: 0;
